--- a/src/Memo.Blog.App/Components/Pages/Article/Components/SelectTagDialog.razor
+++ b/src/Memo.Blog.App/Components/Pages/Article/Components/SelectTagDialog.razor
@@ -1,4 +1,5 @@
 ﻿@using Memo.Blog.App.Models.Article
+@inherits DialogComponentBase
 
 <MDialogExtension Visible="@Visible"
                   ContentClass="rounded-lg"
