--- a/src/Memo.Blog.App/Components/Pages/Login/Login.razor
+++ b/src/Memo.Blog.App/Components/Pages/Login/Login.razor
@@ -3,14 +3,14 @@
 @layout LoginLayout
 
 <div class="login">
-    <MAvatar Size="72" Class="mt-16"
+   @*  <MAvatar Size="72" Class="mt-16"
              Color="white">
         <MImage Src="_content/Masa.Blazor.MauiDemo.Rcl/img/masastack.png"
                 Contain
                 MaxWidth="64"
                 alt="masastack">
         </MImage>
-    </MAvatar>
+    </MAvatar> *@
 
     <MTextField @bind-Value="@_username"
                 HideDetails="true"
