--- a/src/Memo.Blog.App/Components/_Imports.razor
+++ b/src/Memo.Blog.App/Components/_Imports.razor
@@ -12,6 +12,7 @@
 @using Masa.Blazor
 @using Masa.Blazor.Presets;
 
+@using Memo.Blog.App.Components.Base
 @using Memo.Blog.App.Components.Layout
 @using Memo.Blog.App.Components.Components
 @using Memo.Blog.App.Components.Components.Markdown
