--- a/src/Memo.Blog.App/Components/Pages/Home/Components/Article/ArticleList.razor
+++ b/src/Memo.Blog.App/Components/Pages/Home/Components/Article/ArticleList.razor
@@ -1,9 +1,10 @@
 ﻿<MList Dense Style="background-color: transparent">
     @foreach (var article in Articles)
     {
-        <MListItem style="padding: 0">
+        <MListItem style="padding: 0" Ripple="false">
             <MListItemContent>
                 <MCard Flat
+                       Ripple="false"
                        Rounded="@("lg")"
                        Href="@($"/article/edit/{article.ArticleId}")"
                        data-page-stack-strategy>
