--- a/src/Memo.Blog.App/wwwroot/css/app.css
+++ b/src/Memo.Blog.App/wwwroot/css/app.css
@@ -103,3 +103,28 @@ h1:focus {
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
 }
+
+.preview-image-overlay__image__wraper {
+    position: fixed;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+}
+
+.preview-image-overlay__image {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+    .preview-image-overlay__image img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
