--- a/src/Memo.Blog.App/Components/_Imports.razor
+++ b/src/Memo.Blog.App/Components/_Imports.razor
@@ -15,6 +15,7 @@
 @using Memo.Blog.App.Components.Base
 @using Memo.Blog.App.Components.Layout
 @using Memo.Blog.App.Components.Components
+@using Memo.Blog.App.Components.Components.Image;
 @using Memo.Blog.App.Components.Components.Markdown
 @using Memo.Blog.App.Components.Components.Textarea
 @using Memo.Blog.App.Components.Layout.Navigations
