--- a/src/Memo.Blog.App/Components/Components/Image/ImagePreview.razor.css
+++ b/src/Memo.Blog.App/Components/Components/Image/ImagePreview.razor.css
@@ -1,7 +1,4 @@
-﻿/*::deep .pinch-zoom-container {
-    height: 100% !important;
-}
-
+﻿
 .image-preview-body {
     position: absolute;
     top: 0;
@@ -11,45 +8,36 @@
     overflow: hidden
 }
 
-.image-preview-img {
-    max-width: 100%;
-    max-height: 100%;
-    vertical-align: middle;
-    transform: scale3d(1,1,1);
-    cursor: grab;
-    user-select: none;
-    pointer-events: auto
-}
-
 .image-preview-img-wrapper {
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
-    left: 0
+    left: 0;
+    text-align: center;
 }
 
     .image-preview-img-wrapper::before {
+        content: '';
         display: inline-block;
-        width: 1px;
-        height: 50%;
-        margin-right: -1px;
-        content: ''
+        height: 100%;
+        vertical-align: middle;
     }
 
-.image-preview-moving .image-preview-img {
-    cursor: grabbing
-}
-
-.image-preview-moving .image-preview-img-wrapper {
-    transition-duration: 0s
-}
+    .image-preview-img-wrapper img {
+        max-width: 100%;
+        max-height: 100%;
+        vertical-align: middle;
+        cursor: grab;
+        user-select: none;
+        pointer-events: auto;
+    }
 
 .image-preview-operations-wrapper {
     position: fixed;
     bottom: 0;
     right: 0;
-    z-index: 1081;
+    z-index: 9999;
     width: 100%
 }
 
@@ -81,118 +69,6 @@
     .image-preview-operations-operation:hover {
         background: rgba(0,0,0,.2)
     }
-
-::deep .image-preview-operations-operation-disabled .m-icon {
-    color: rgba(255,255,255,.25) !important;
-    pointer-events: none
-}
-
-.image-preview-operations-operation:last-of-type {
-    margin-left: 0
-}
-
-.image-preview-operations-progress {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%)
-}
-*/
-
-/*.image-preview-dialog-wraper {
-    position: fixed;
-    z-index: 1;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-}
-
-.image-preview-dialog-image {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-    .image-preview-dialog-image img {
-        max-width: 100%;
-        max-height: 100%;
-        vertical-align: middle;
-        transform: scale3d(1,1,1);
-    }
-
-::deep .pinch-zoom-container {
-    height: 100% !important;
-    width: 100%;
-}*/
-
-
-.image-preview-dialog-wraper {
-    overflow: inherit !important;
-    position: relative;
-    height: 100vh;
-}
-.image-preview-dialog-image {
-    transform-origin: 0% 0%;
-    position: absolute;
-    transform: scale(1, 1) translate(0px, 0px);
-}
-    .image-preview-dialog-image img {
-        max-width: 100%;
-        max-height: 100%;
-        -webkit-user-drag: none;
-        -moz-user-drag: none;
-        -ms-user-drag: none;
-        user-drag: none;
-        vertical-align: middle;
-        transform: scale3d(1,1,1);
-    }
-
-
-.image-preview-operations-wrapper {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    z-index: 1081;
-    width: 100%
-}
-
-.image-preview-operations {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-size: 14px;
-    font-variant: tabular-nums;
-    line-height: 1.5715;
-    font-feature-settings: 'tnum';
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    color: rgba(255,255,255,.85);
-    list-style: none;
-    background: rgba(0,0,0,.1);
-    pointer-events: auto
-}
-
-.image-preview-operations-operation {
-    margin-left: 12px;
-    padding: 12px;
-    cursor: pointer;
-    transition: all .3s
-}
-
-    .image-preview-operations-operation:hover {
-        background: rgba(0,0,0,.2)
-    }
-
-::deep .image-preview-operations-operation-disabled .m-icon {
-    color: rgba(255,255,255,.25) !important;
-    pointer-events: none
-}
 
 .image-preview-operations-operation:last-of-type {
     margin-left: 0
