✨ 优化缩放布局

--- a/src/Memo.Blog.App/Components/Components/Image/ImagePreview.razor
+++ b/src/Memo.Blog.App/Components/Components/Image/ImagePreview.razor
@@ -4,7 +4,9 @@
                   OnBeforeShowContent="BeforeShowContent">
     <div class="image-preview-body">
         <div class="image-preview-img-wrapper">
+            <div class="image-preview-img">
                 <img @ref="_previewImg" src="@Src" />
+            </div>
         </div>
 
         <div class="image-preview-operations-wrapper">
