--- a/src/Memo.Blog.App/Components/Pages/Article/ArticleEdit.razor.css
+++ b/src/Memo.Blog.App/Components/Pages/Article/ArticleEdit.razor.css
@@ -1,24 +1,1 @@
-﻿::deep .article-title .m-input__slot {
-    padding: 0px !important;
-}
-
-.content-input-wrap {
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-    min-height: 0;
-    overflow: auto;
-}
-
-::deep .content-markdown-wrap {
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-    min-height: 0;
-}
-
-::deep .content-markdown {
-    flex-grow: 1;
-    min-height: 0;
-    overflow: visible;
-}
+﻿
