--- a/src/Memo.Blog.App/Components/Pages/Moment/MomentEdit.razor
+++ b/src/Memo.Blog.App/Components/Pages/Moment/MomentEdit.razor
@@ -28,7 +28,7 @@
 </PStackPageBarInit>
 
 <MContainer Fluid Class="d-flex flex-column">
-    <div>
+    <div class="mb-4">
         <div class="d-flex align-center flex-wrap text-subtitle-2">
             <span>
                 <MIcon>mdi-update</MIcon> @_moment.CreateTime.ToString("yyyy-MM-dd HH:mm")
@@ -41,32 +41,13 @@
         </div>
     </div>
 
-    <div class="content-input-wrap user-select">
-        @if (_editText)
-        {
-            <MarkdownEdit @ref="markdownEdit"
-                          @bind-Value="_moment.Content"
-                          WrapClass="content-markdown-wrap"
-                          Class="px-3 rounded-lg content-markdown"
-                          Autofocus="_autofocus"
-                          OnAfter="HandleLaunchActivation">
-            </MarkdownEdit>
-        }
-        else
-        {
-            <TextareaEdit @ref="textareaEdit"
-                          @bind-Value="_moment.Content"
-                          Class="rounded-lg"
-                          Autofocus="_autofocus"
-                          OnAfter="HandleLaunchActivation">
-            </TextareaEdit>
-        }
-    </div>
-
-    @if (_editText)
-    {
-        <div class="vditor-toolbar-help"></div>
-    }
+    <MarkdownEdit @ref="markdownEdit"
+                  @bind-Value="_moment.Content"
+                  WrapClass="content-markdown-wrap"
+                  Class="px-3 rounded-lg content-markdown"
+                  Autofocus="_autofocus"
+                  OnAfter="HandleLaunchActivation">
+    </MarkdownEdit>
 </MContainer>
 
 <ManageTagDialog @bind-Tags="_moment.Tags" @bind-Visible="_showManageTag" />
