--- a/src/Memo.Blog.App/wwwroot/css/extend/vditor-extend.css
+++ b/src/Memo.Blog.App/wwwroot/css/extend/vditor-extend.css
@@ -1,27 +1,9 @@
 ﻿:root {
-    --vditor-toolbar-height: 0px;
+    --vditor-toolbar-height: 70px;
 }
 
 .vditor {
     border: none !important;
-}
-
-.vditor-toolbar {
-    background: var(--m-theme-surface) !important;
-    padding-left: 0px !important;
-    border: none;
-}
-
-    .vditor-toolbar .vditor-toolbar__item {
-        padding: 0px 8px !important;
-    }
-
-.vditor-content {
-    min-height: 0px;
-}
-
-.theme--dark .vditor-reset {
-    color: #fff;
 }
 
 .vditor-reset {
@@ -29,8 +11,11 @@
     border-radius: 8px;
     padding-left: 0px !important;
     padding-right: 0px !important;
-    --editor-bottom: 48px !important;
 }
+
+    .vditor-reset::after {
+        height: 10px !important;
+    }
 
     .vditor-reset *::-webkit-scrollbar {
         display: initial !important;
@@ -59,70 +44,24 @@
         border-radius: 8px;
     }
 
-.vditor-ir__node--expand[data-type="code-block"] .vditor-ir__preview {
-    display: none;
+
+.vditor-toolbar {
+    position: sticky;
+    top: 0;
+    z-index: 99;
+    background: var(--m-theme-surface) !important;
+    padding-left: 0px !important;
+    overflow-x: auto !important;
+    border: none !important;
 }
 
-@media screen and (min-width:600px) {
-    .vditor-toolbar {
-        margin-left: -10px;
+    .vditor-toolbar .vditor-toolbar__item {
+        padding: 0px 8px !important;
     }
 
-    .vditor-reset video {
-        max-height: 55vh;
-    }
-
-    .vditor-reset img {
-        max-height: 55vh;
-    }
-}
-
-.vditor-panel--arrow::before {
-    filter: drop-shadow(0.1px -0.1px 1px rgba(0, 0, 0, .1));
-}
-
-@media screen and (max-width:600px) {
-    :root {
-        --vditor-toolbar-height: 70px;
-    }
-
-    .vditor-toolbar {
-        position: fixed;
-        bottom: 0px;
-        left: 0px;
-        right: 0px;
-        border: none;
-        z-index: 10;
-        overflow-x: auto;
-        /*box-shadow: 0 -3px 5px -3px rgba(0,0,0,.2);*/
-    }
-
-        .vditor-toolbar .vditor-toolbar__item {
-            padding: 0px 8px !important;
-        }
-
-    .vditor-toolbar-content {
-        min-width: var(--vditor-toolbar-width);
-        max-height: var(--vditor-toolbar-height);
-        display: flex;
-        flex-wrap: wrap;
-        margin-left: 10px !important;
-        margin-right: 10px !important;
-    }
-
-    button[data-type="headings"].vditor-tooltipped + .vditor-panel--arrow {
-        position: fixed;
-        bottom: var(--vditor-toolbar-height);
-    }
-
-        button[data-type="headings"].vditor-tooltipped + .vditor-panel--arrow::before {
-            top: unset;
-            bottom: -14px;
-            transform: rotateX(180deg);
-            filter: drop-shadow(0.1px 0.1px 1px rgba(0, 0, 0, .2));
-        }
-
-    .vditor-toolbar-help {
-        min-height: var(--vditor-toolbar-height);
-    }
+.vditor-toolbar-content {
+    min-width: var(--vditor-toolbar-width);
+    max-height: var(--vditor-toolbar-height);
+    display: flex;
+    flex-wrap: wrap;
 }
