--- a/src/Memo.Blog.App/Components/Pages/Login/Login.razor
+++ b/src/Memo.Blog.App/Components/Pages/Login/Login.razor
@@ -3,9 +3,9 @@
 @layout LoginLayout
 
 <div class="login">
-    <div Style="margin-top: 10%" class="d-flex justify-center">
-        <MImage AspectRatio="16/9d"
-                Width="84"
+    <div Style="margin-top: 20%" class="d-flex justify-center mb-14">
+        <MImage 
+                Width="14"
                 Src="images/logo.png"
                 Contain
                 Eager
