--- a/src/Memo.Blog.App/Components/Pages/Article/Components/SelectBannerDialog.razor
+++ b/src/Memo.Blog.App/Components/Pages/Article/Components/SelectBannerDialog.razor
@@ -11,13 +11,13 @@
             头图
         </MCardTitle>
         <MCardText Class="pb-0">
-            <div @onclick="() => _preview = true ">
+            <div @onclick="() => _preview = !string.IsNullOrWhiteSpace(Banner) ">
                 <MImage Eager AspectRatio="16/9d" MinWidth="240" Src="@Banner" />
             </div>
         </MCardText>
         <MCardActions>
             <MButton Text="true"
-                     OnClick="HandleSelectImage">
+                     OnClick="HandlePickImage">
                 选择图片
             </MButton>
 
@@ -34,20 +34,5 @@
         </MCardActions>
     </MCard>
 
-   @*  <MDialogExtension Visible="_preview" VisibleChanged="InternalVisibleChanged">
-        <div style="position: fixed; top: 0; left: 0; right: 0; z-index: 99">
-            <MButton Icon
-                     Style="float: right"
-                     Color="error"
-                     OnClick="() => _preview = false">
-                <MIcon>mdi-close</MIcon>
-            </MButton>
-        </div>
-        <div class="preview-image-overlay__image__wraper">
-            <div class="preview-image-overlay__image">
-                <img src="@Banner" />
-            </div>
-        </div>
-    </MDialogExtension> *@
     <ImagePreview @bind-Visible="_preview" Src="@Banner" />
 </MDialogExtension>
