✨ 切换zoom组件，优化代码

--- a/src/Memo.Blog.App/Components/Components/Image/ImagePreview.razor
+++ b/src/Memo.Blog.App/Components/Components/Image/ImagePreview.razor
@@ -3,10 +3,9 @@
 <MDialogExtension Visible="Visible"
                   OnBeforeShowContent="BeforeShowContent">
     <div class="image-preview-body">
-        <div class="image-preview-img-wrapper">
-            <div class="image-preview-img">
-                <img @ref="_previewImg" src="@Src" />
-            </div>
+
+        <div class="image-preview-wrap">
+            <img @ref="_previewImg" src="@Src" />
         </div>
 
         <div class="image-preview-operations-wrapper">
