--- a/src/Memo.Blog.App/Components/Components/Image/ImagePreview.razor.css
+++ b/src/Memo.Blog.App/Components/Components/Image/ImagePreview.razor.css
@@ -4,38 +4,23 @@
     right: 0;
     bottom: 0;
     left: 0;
-    overflow: hidden
+    overflow: hidden;
 }
 
-.image-preview-img-wrapper {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    text-align: center;
+.image-preview-wrap {
+    position: relative;
+    height: 100%;
 }
 
-    .image-preview-img-wrapper:after {
-        content: '';
-        display: inline-block;
-        height: 100%;
-        vertical-align: middle;
-    }
-
-.image-preview-img {
-    display: inline-block;
-    vertical-align: middle;
-}
-  
-    .image-preview-img img {
+    .image-preview-wrap img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        margin: auto;
         max-width: 100%;
-        max-height: 100%;
         vertical-align: middle;
-        transform: scale3d(1,1,1);
-        cursor: grab;
-        user-select: none;
-        pointer-events: auto;
     }
 
 .image-preview-operations-wrapper {
