--- a/src/Memo.Blog.App/wwwroot/css/extend/masa-blazor-extend.css
+++ b/src/Memo.Blog.App/wwwroot/css/extend/masa-blazor-extend.css
@@ -31,6 +31,45 @@
     border-radius: inherit;
 }
 
+.app-list-card {
+}
+
+    .app-list-card .m-list {
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
+
+    .app-list-card .m-list-item:first-child {
+        border-top-left-radius: inherit;
+        border-top-right-radius: inherit;
+    }
+
+        .app-list-card .m-list-item:first-child::before {
+            border-top-left-radius: inherit;
+            border-top-right-radius: inherit;
+        }
+
+    .app-list-card .m-list-item:last-child {
+        border-bottom-left-radius: inherit;
+        border-bottom-right-radius: inherit;
+    }
+
+        .app-list-card .m-list-item:last-child::before {
+            border-bottom-left-radius: inherit;
+            border-bottom-right-radius: inherit;
+        }
+
+    .app-list-card .dynamic-list-item-collection .m-list-item:nth-last-child(2) {
+        border-bottom-left-radius: inherit;
+        border-bottom-right-radius: inherit;
+    }
+
+        .app-list-card .dynamic-list-item-collection .m-list-item:nth-last-child(2)::before {
+            border-bottom-left-radius: inherit;
+            border-bottom-right-radius: inherit;
+        }
+
+
 /*解决移动端悬停问题*/
 @media (hover: none) {
     .theme--light.m-btn:hover::before {
