--- a/src/Memo.Blog.App/Components/Pages/User/UserEdit.razor
+++ b/src/Memo.Blog.App/Components/Pages/User/UserEdit.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>UserEdit</PageTitle>
 
-<PStackPageBarInit></PStackPageBarInit>
+<PStackPageBarInit Title="个人信息"></PStackPageBarInit>
 
 <div class="pa-4">
     <MCard Class="app-list-card"
@@ -89,6 +89,15 @@
             </MListItem>
         </MList>
     </MCard>
+
+    <div class="mt-8">
+        <MButton Block Rounded
+                 Class="text-capitalize"
+                 Large
+                 Color="primary">
+            保存
+        </MButton>
+    </div>
 </div>
 
 <div style="position:fixed; bottom: 0; left: 0; right: 0; padding-bottom: 20px">
