--- a/src/Memo.Blog.App/App.xaml
+++ b/src/Memo.Blog.App/App.xaml
@@ -3,12 +3,13 @@
     x:Class="Memo.Blog.App.App"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls"
-    xmlns:local="clr-namespace:Memo.Blog.App"
-    android:Application.WindowSoftInputModeAdjust="Resize">
+    xmlns:local="clr-namespace:Memo.Blog.App">
     <Application.Resources>
         <ResourceDictionary>
-
+            <!--
+                xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls"
+                android:Application.WindowSoftInputModeAdjust="Resize"
+            -->
             <Color x:Key="PageBackgroundColor">#512bdf</Color>
             <Color x:Key="PrimaryTextColor">White</Color>
 
