--- a/src/Memo.Blog.App/Components/Pages/Home/Components/Article/ArticleList.razor
+++ b/src/Memo.Blog.App/Components/Pages/Home/Components/Article/ArticleList.razor
@@ -3,60 +3,63 @@
     {
         <MListItem style="padding: 0" Ripple="false">
             <MListItemContent>
-                <MCard Flat
-                       Ripple="false"
-                       Rounded="@("lg")"
-                       Href="@($"/article/edit/{article.ArticleId}")"
-                       data-page-stack-strategy>
-                    <div class="pa-3">
-                        <div class="d-flex flex-column">
-                            <div class="h6 text-truncate font-weight-black">
-                                @article.Title
-                            </div>
-                        </div>
-
-                        <div class="mt-1 d-flex flex-no-wrap justify-space-between">
-                            <div>
-                                <div class="subtitle-2 text-truncate-l2">
-                                    @article.Description
+                <PPageStackLink Href="@($"/article/edit/{article.ArticleId}")">
+                    <CustomContent Context="push">
+                        <MCard Flat
+                               Ripple="false"
+                               Rounded="@("lg")"
+                               OnClick="push">
+                            <div class="pa-3">
+                                <div class="d-flex flex-column">
+                                    <div class="h6 text-truncate font-weight-black">
+                                        @article.Title
+                                    </div>
                                 </div>
-                                <div class="mt-1 caption d-flex flex-wrap  align-center">
-                                    @if (!string.IsNullOrWhiteSpace(article.Category?.Name))
+
+                                <div class="mt-1 d-flex flex-no-wrap justify-space-between">
+                                    <div>
+                                        <div class="subtitle-2 text-truncate-l2">
+                                            @article.Description
+                                        </div>
+                                        <div class="mt-1 caption d-flex flex-wrap  align-center">
+                                            @if (!string.IsNullOrWhiteSpace(article.Category?.Name))
+                                            {
+                                                <MChip Outlined Color="green" XSmall Class="px-2"
+                                                       Style="min-width: min-content;">
+                                                    @article.Category.Name
+                                                </MChip>
+                                            }
+
+                                            @foreach (var tag in article.Tags)
+                                            {
+                                                <MChip Label Color="primary" XSmall Class="ma-1 px-2"
+                                                       Style="min-width: min-content;">
+                                                    @tag.Name
+                                                </MChip>
+                                            }
+                                        </div>
+                                    </div>
+                                    @if (!string.IsNullOrWhiteSpace(article.Banner))
                                     {
-                                        <MChip Outlined Color="green" XSmall Class="px-2"
-                                               Style="min-width: min-content;">
-                                            @article.Category.Name
-                                        </MChip>
-                                    }
-
-                                    @foreach (var tag in article.Tags)
-                                    {
-                                        <MChip Label Color="primary" XSmall Class="ma-1 px-2"
-                                               Style="min-width: min-content;">
-                                            @tag.Name
-                                        </MChip>
+                                        <div style="width: 140px">
+                                            <MImage Eager AspectRatio="16/9d" Width="140" Src="@article.Banner"></MImage>
+                                        </div>
                                     }
                                 </div>
-                            </div>
-                            @if (!string.IsNullOrWhiteSpace(article.Banner))
-                            {
-                                <div style="width: 140px">
-                                    <MImage Eager AspectRatio="16/9d" Width="140" Src="@article.Banner"></MImage>
+
+                                <div class="mt-3 caption d-flex justify-space-between">
+                                    <div class="d-flex align-center">
+                                        @($"点赞 {article.Likes} · 评论 {article.Comments} · 浏览 {article.Views}")
+                                    </div>
+
+                                    <div class=" text--disabled">
+                                        @($"上次更新：{article.UpdateTime?.ToString("yyyy-MM-dd HH:mm") ?? string.Empty}")
+                                    </div>
                                 </div>
-                            }
-                        </div>
-
-                        <div class="mt-3 caption d-flex justify-space-between">
-                            <div class="d-flex align-center">
-                                @($"点赞 {article.Likes} · 评论 {article.Comments} · 浏览 {article.Views}")
                             </div>
-
-                            <div class=" text--disabled">
-                                @($"上次更新：{article.UpdateTime?.ToString("yyyy-MM-dd HH:mm") ?? string.Empty}")
-                            </div>
-                        </div>
-                    </div>
-                </MCard>
+                        </MCard>
+                    </CustomContent>
+                </PPageStackLink>
             </MListItemContent>
         </MListItem>
     }
