--- a/src/Memo.Blog.App/Components/Pages/Home/Components/Moment/MomentList.razor
+++ b/src/Memo.Blog.App/Components/Pages/Home/Components/Moment/MomentList.razor
@@ -3,38 +3,41 @@
     {
         <MListItem style="padding: 0" Ripple="false">
             <MListItemContent>
-                <MCard Flat
-                       Ripple="false"
-                       Rounded="@("lg")"
-                       Href="@($"/moment/edit/{moment.MomentId}")"
-                       data-page-stack-strategy>
-                    <div class="pa-3">
-                        <div>
-                            <div class="subtitle-2 text-truncate-l3">
-                                @moment.Content
-                            </div>
-                            <div class="mt-1 caption d-flex flex-wrap align-center">
-                                @foreach (var tag in moment.Tags)
-                                {
-                                    <MChip Label Color="primary" XSmall Class="mr-1 px-2"
-                                           Style="min-width: min-content;">
-                                        @tag
-                                    </MChip>
-                                }
-                            </div>
-                        </div>
+                <PPageStackLink Href="@($"/moment/edit/{moment.MomentId}")">
+                    <CustomContent Context="push">
+                        <MCard Flat
+                               Ripple="false"
+                               Rounded="@("lg")"
+                               OnClick="push">
+                            <div class="pa-3">
+                                <div>
+                                    <div class="subtitle-2 text-truncate-l3">
+                                        @moment.Content
+                                    </div>
+                                    <div class="mt-1 caption d-flex flex-wrap align-center">
+                                        @foreach (var tag in moment.Tags)
+                                        {
+                                            <MChip Label Color="primary" XSmall Class="mr-1 px-2"
+                                                   Style="min-width: min-content;">
+                                                @tag
+                                            </MChip>
+                                        }
+                                    </div>
+                                </div>
 
-                        <div class="mt-3 caption d-flex justify-space-between">
-                            <div class="d-flex align-center">
-                                @($"点赞 {moment.Likes} · 评论 {moment.Comments}")
-                            </div>
+                                <div class="mt-3 caption d-flex justify-space-between">
+                                    <div class="d-flex align-center">
+                                        @($"点赞 {moment.Likes} · 评论 {moment.Comments}")
+                                    </div>
 
-                            <div class=" text--disabled">
-                                @($"{moment.CreateTime.ToString("yyyy-MM-dd HH:mm")}")
+                                    <div class=" text--disabled">
+                                        @($"{moment.CreateTime.ToString("yyyy-MM-dd HH:mm")}")
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </MCard>
+                        </MCard>
+                    </CustomContent>
+                </PPageStackLink>
             </MListItemContent>
         </MListItem>
     }
