--- a/src/Memo.Blog.App/Components/Layout/MainLayout.razor
+++ b/src/Memo.Blog.App/Components/Layout/MainLayout.razor
@@ -5,7 +5,7 @@
         <MErrorHandler>
             <AuthorizeView>
                 <Authorized>
-                    <PPageStack TabbedPatterns="@( ["^/$", "/todo", "^/user$"])"
+                    <PPageStack TabbedPatterns="@( ["^/$", "/todo", "/user"])"
                                 SelfPatterns="@( ["/todo"])">
                         @Body
                     </PPageStack>
