--- a/src/Memo.Blog.App/Components/Main.razor
+++ b/src/Memo.Blog.App/Components/Main.razor
@@ -56,13 +56,13 @@
             _statusBarColor = color;
             style = _dark ? 2 : 1;
         }
-        // else if (_path == "" || _path.StartsWith("shop/search") || _path.StartsWith("todo"))
-        // {
-        //     var color = _dark ? DarkSurface : Surface;
-        //     if (_statusBarColor == color) return;
-        //     _statusBarColor = color;
-        //     style = _dark ? 1 : 2;
-        // }
+        else if (_path == "" || _path.StartsWith("todo"))
+        {
+            var color = _dark ? DarkSurface : Surface;
+            if (_statusBarColor == color) return;
+            _statusBarColor = color;
+            style = _dark ? 1 : 2;
+        }
         else
         {
             var color = _dark ? Dark : White;
