--- a/src/Memo.Blog.App/Components/Pages/User/User.razor
+++ b/src/Memo.Blog.App/Components/Pages/User/User.razor
@@ -6,7 +6,7 @@
          Flat
          Fixed>
     <ChildContent>
-        <PPageStackLink Href="/user/edit">
+        <PPageStackLink Href="/edit-user">
             <CustomContent Context="push">
                 <div @onclick="push">
                     <MAvatar Size="48" Color="white">
